# weft

./: .gitignore  .gitlab-ci.yml  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  deny.toml  rust-toolchain.toml
.cursor/: environment.json
.cursor/rules/: daily-maintenance.mdc
.githooks/: pre-push
.github/workflows/: bench.yml  ci.yml  deploy-site.yml  release.yml  weft-image.yml
bench/clickbench/: COVERAGE_GATE_KNOWN_ISSUES.md  README.md  assert-beats-sail.sh  benchmark.sh  hits_schema.tsv  install  queries.sql  query  run-correctness.sh  template.json
bench/tpcds/: README.md  baseline.json
bench/tpch/: README.md  run-correctness.sh
crates/weft-ai/: Cargo.toml
crates/weft-ai/src/: lib.rs  request.rs
crates/weft-analyzer/: Cargo.toml
crates/weft-analyzer/src/: lib.rs
crates/weft-bench/: Cargo.toml
crates/weft-bench/src/: main.rs  tpcds.rs  tpcds_data.rs  tpch.rs  tpch_data.rs  tpch_dist.rs
crates/weft-catalog/: Cargo.toml
crates/weft-catalog-glue/: Cargo.toml
crates/weft-catalog-glue/src/: lib.rs
crates/weft-catalog-hive/: Cargo.toml
crates/weft-catalog-hive/src/: lib.rs  thrift.rs
crates/weft-catalog-rest/: Cargo.toml
crates/weft-catalog-rest/src/: lib.rs
crates/weft-catalog/src/: hive_types.rs  lib.rs
crates/weft-cli/: Cargo.toml
crates/weft-cli/src/: main.rs
crates/weft-cli/tests/: cli_driver_worker.rs
crates/weft-clustermgr/: Cargo.toml
crates/weft-clustermgr/src/: lib.rs  main.rs
crates/weft-common/: Cargo.toml
crates/weft-common/src/: lib.rs
crates/weft-connect/: Cargo.toml
crates/weft-connect/examples/: hive_e2e.rs
crates/weft-connect/src/: catalog.rs  distributed.rs  lib.rs  streaming.rs  types.rs  udf.rs
crates/weft-connect/src/translate/: expr.rs  mod.rs  relation.rs
crates/weft-connect/tests/: dataframe_api.rs  distributed_pyspark.rs  observability.rs  pyspark_parity.rs  select_one.rs  streaming.rs
crates/weft-datasource/: Cargo.toml
crates/weft-datasource/src/: lib.rs
crates/weft-execution/: Cargo.toml
crates/weft-execution/src/: aqe.rs  driver.rs  flight.rs  lib.rs  lineage.rs  membership.rs  scheduler.rs
crates/weft-execution/src/membership/: k8s.rs
crates/weft-execution/src/plan/: mod.rs  physical_splitter.rs  stage_planner.rs
crates/weft-execution/src/shuffle/: codec.rs  mod.rs  partition.rs  protocol.rs  spill.rs
crates/weft-execution/tests/: auto_distribute.rs  cli_driver_worker.rs  distributed_dag.rs  distributed_groupby.rs  distributed_join.rs  plan_fallback.rs
crates/weft-gateway/: Cargo.toml
crates/weft-gateway/src/: authz.rs  cloud.rs  cluster_client.rs  glue.rs  lib.rs  main.rs  oidc.rs  scim.rs  server.rs
crates/weft-govern/: Cargo.toml
crates/weft-govern/src/: governed.rs  lib.rs  resolve.rs  sql.rs
crates/weft-hvm/: Cargo.toml
crates/weft-hvm/src/: lib.rs
crates/weft-loom/: Cargo.toml
crates/weft-loom/examples/: bench_hashagg.rs
crates/weft-loom/src/: assume_role_credentials.rs  catalog_bridge.rs  lib.rs  schema_adapt.rs  spark_create_table.rs  spark_decimal.rs  spark_int_literals.rs  spark_names.rs  udf_registry.rs
crates/weft-loom/src/ops/: hash_agg.rs  mod.rs
crates/weft-loom/src/spark_functions/: mod.rs  spark_aggregates.rs  spark_aggregates2.rs  spark_array.rs  spark_bitshift.rs  spark_cast_constructors.rs  spark_checked_mul.rs  spark_convert.rs  spark_csv.rs  spark_datetime.rs  spark_datetime2.rs  spark_datetime3.rs  spark_divide.rs  spark_encoding.rs  spark_from_json.rs  spark_if.rs  spark_json.rs  spark_math.rs  spark_misc.rs  spark_nonzero_divisor.rs  spark_regex_misc.rs  spark_strings.rs  try_arithmetic.rs
crates/weft-meta/: Cargo.toml
crates/weft-meta/migrations/: 0001_init.sql
crates/weft-meta/src/: lib.rs
crates/weft-observability/: Cargo.toml
crates/weft-observability/src/: events.rs  lib.rs  model.rs  store.rs  tracker.rs
crates/weft-optimizer/: Cargo.toml
crates/weft-optimizer/src/: lib.rs
crates/weft-orchestrator/: Cargo.toml
crates/weft-orchestrator/src/: backend.rs  k8s.rs  lib.rs  manifests.rs  spec.rs
crates/weft-physical/: Cargo.toml
crates/weft-physical/src/: lib.rs
crates/weft-plan/: Cargo.toml
crates/weft-plan/src/: lib.rs
crates/weft-proto/: Cargo.toml  build.rs
crates/weft-proto/src/: lib.rs
crates/weft-pyworker/: Cargo.toml
crates/weft-pyworker/src/: lib.rs
crates/weft-scheduler/: Cargo.toml
crates/weft-scheduler/src/: executor.rs  lib.rs  main.rs
crates/weft-spark-compat/: COLUMN_NAMING_PASS.md  CREATE_TABLE_USING_DESIGN.md  Cargo.toml  HANDOFF.md  PARITY_SWARM_PLAYBOOK.md  README.md  ROADMAP.md  START_HERE.md
crates/weft-spark-compat/spark-tests/: NOTICE  VERSION
crates/weft-spark-compat/src/: classify.rs  format.rs  golden.rs  lib.rs  normalize.rs  report.rs  runner.rs  splitter.rs
crates/weft-spark-compat/tests/: golden_sql.rs
crates/weft-sql/: Cargo.toml
crates/weft-sql/src/: dialect.rs  lib.rs
crates/weft-streaming/: Cargo.toml
crates/weft-streaming/src/: checkpoint.rs  config.rs  lib.rs  query.rs  scheduler.rs  sink.rs  source.rs  state.rs  watermark.rs
crates/weft-ui-server/: Cargo.toml
deploy/ci-runner/: README.md  launch-ephemeral-runner.sh
deploy/docker/: README.md  connect-server.Dockerfile  connect-server.Dockerfile.dockerignore  gateway.Dockerfile  gateway.Dockerfile.dockerignore  worker.Dockerfile  worker.Dockerfile.dockerignore
deploy/k8s/: README.md
deploy/terraform/: .gitignore  README.md  SECURITY.md  main.tf  outputs.tf  variables.tf  versions.tf
docs/: ISSUES.md  NEXT_STEPS.md  architecture.md  catalogs.md  deployment.md  distributed-k8s.md  k8s-migration.md  runtime-contract.md
parity/: .gitignore  baseline.json
python/pyweft/: README.md  pyproject.toml
scripts/: ci-local.sh  daily-maintenance.sh
site/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
site/src/: App.tsx
ui/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
web/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
(+107 files in other folders)
