[package]
name = "weft-analyzer"
description = "Resolves the unresolved warp IR (names, types, functions) against the catalog into a logical plan."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
weft-common = { workspace = true }
weft-plan = { workspace = true }
weft-catalog = { workspace = true }
