[package]
name = "weft-bench"
description = "Engine-direct benchmark harness: runs ClickBench (and TPC-H) queries through weft-loom on synthetic data, ClickBench-style."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "weft-bench"
path = "src/main.rs"

[dependencies]
weft-loom = { workspace = true }
datafusion = "43"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde_json = "1"
