[package]
name = "weft-bench"
description = "Engine-direct + live-server benchmark harness: runs ClickBench (and TPC-H) queries through weft-loom / weft-connect on synthetic data, ClickBench-style."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "weft-bench"
path = "src/main.rs"

[dependencies]
weft-loom = { workspace = true }
weft-connect = { workspace = true }
weft-proto = { workspace = true }
datafusion = "54"
tonic = "0.12"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
serde_json = "1"
