[package]
name = "weft-bench"
description = "Engine-direct + live-server benchmark harness: ClickBench, TPC-H, and TPC-DS through weft-loom / weft-connect."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "weft-bench"
path = "src/main.rs"

[dependencies]
weft-loom = { workspace = true }
weft-connect = { workspace = true }
weft-execution = { workspace = true }
weft-proto = { workspace = true }
datafusion = "54"
tonic = "0.12"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
serde_json = "1"
tpchgen = "2"
