[package]
name = "weft-catalog-glue"
description = "AWS Glue Data Catalog provider for Weft. Shells out to the `aws glue` CLI (EC2 instance role provides credentials via IMDS), so no heavy AWS SDK is pulled. Shared by the gateway and the cluster-side engine."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
weft-catalog = { workspace = true }
async-trait = "0.1"
serde_json = "1"
# Only `process` is needed: we shell out to the `aws glue` CLI rather than link the AWS SDK.
tokio = { version = "1", features = ["process"] }
