[package]
name = "weft-catalog-hive"
description = "Hive Metastore catalog provider for Weft (Thrift binary protocol over TCP)."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
weft-catalog = { workspace = true }
async-trait = "0.1"
# Minimal Thrift client: a raw TCP socket + the binary protocol, hand-rolled below. Avoids
# pulling a full Thrift/volo stack (and its transitive runtime) for the three RPCs we make.
tokio = { version = "1", features = ["net", "io-util"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "net", "io-util"] }
