[package]
name = "weft-catalog-rest"
description = "Iceberg REST / Unity Catalog-compatible catalog provider."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
weft-catalog = { workspace = true }
weft-common = { workspace = true }
async-trait = "0.1"
serde_json = "1"
