[package]
name = "weft-cli"
description = "The `weft` binary: launches the Spark Connect server and dev utilities."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "weft"
path = "src/main.rs"

[dependencies]
weft-common = { workspace = true }
weft-connect = { workspace = true }
weft-loom = { workspace = true }
weft-execution = { workspace = true }
weft-ui-server = { workspace = true }
weft-observability = { workspace = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
# TODO(deps): clap = { version = "4", features = ["derive"] } for real subcommand parsing.

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
tempfile = "3"
datafusion = "54"
