[package]
name = "weft-clustermgr"
description = "Weft cluster manager: a Kubernetes operator that reconciles WeftCluster custom resources into a Spark Connect driver pod + N Arrow Flight worker pods, with autoscaling and per-cluster IRSA."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "weft-clustermgr"
path = "src/main.rs"

[dependencies]
weft-common = { workspace = true }
weft-meta = { workspace = true }
# TODO(deps, Rust >= 1.80): kube + k8s-openapi (operator + CRD), tokio, serde/serde_json, schemars
# (CRD schema). The WeftCluster spec/status types and the reconcile state machine below are the
# frozen contract the gateway (which creates WeftCluster objects) and Helm templates build against.
