[package]
name = "weft-connect"
description = "Spark Connect gRPC server: session lifecycle, Config/AnalyzePlan/ExecutePlan, reattachable execution, Arrow IPC results."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
weft-common = { workspace = true }
weft-proto = { workspace = true }
weft-plan = { workspace = true }
weft-sql = { workspace = true }
weft-analyzer = { workspace = true }
weft-optimizer = { workspace = true }
weft-physical = { workspace = true }
weft-execution = { workspace = true, features = ["k8s"] }
weft-catalog = { workspace = true }
weft-catalog-hive = { workspace = true }
weft-catalog-glue = { workspace = true }
weft-catalog-rest = { workspace = true }
weft-loom = { workspace = true }
weft-streaming = { workspace = true }
datafusion = "54"  # lower Spark Connect relations/expressions to DataFusion logical plans
serde_json = "1"
tonic = "0.12"
prost = "0.13"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "sync"] }
tokio-stream = "0.1"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
tokio-stream = "0.1"
tonic = "0.12"
