[package]
name = "weft-execution"
description = "Runtime: local multi-threaded execution, and distributed driver/worker scheduling with Arrow Flight shuffle."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
weft-common = { workspace = true }
weft-physical = { workspace = true }
weft-loom = { workspace = true }
arrow-flight = "58"
tonic = "0.14"  # must match arrow-flight 58's tonic (its FlightService trait is over 0.14 types)
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
futures = "0.3"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
