[package]
name = "weft-gateway"
description = "Weft control-plane REST/WebSocket API gateway: the single public entry point. Holds identity/SSO, the Spark Connect client pool, governance enforcement at the edge, and result streaming. The browser speaks to this; never gRPC."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "weft-gateway"
path = "src/main.rs"

[dependencies]
weft-common = { workspace = true }
weft-meta = { workspace = true }
weft-govern = { workspace = true }
weft-clustermgr = { workspace = true }
weft-loom = { workspace = true }
weft-sql = { workspace = true }
weft-catalog = { workspace = true }
weft-catalog-hive = { workspace = true }
weft-catalog-glue = { workspace = true }
weft-proto = { workspace = true }
tonic = "0.12"
datafusion = "54"
async-trait = "0.1"
axum = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal", "process", "sync", "time", "io-util"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jsonwebtoken = "9"
bcrypt = "0.15"
tower-http = { version = "0.5", features = ["fs"] }
# External-IdP SSO (OIDC) + SCIM 2.0 provisioning. `openidconnect` drives discovery, the PKCE
# auth-code flow, and id_token validation (issuer/audience/nonce/exp/JWKS signature); `reqwest` is
# its async HTTP backend (rustls, no OpenSSL). The router layers OIDC/SCIM on top of the same
# session-JWT seam as the break-glass local admin login.
openidconnect = { version = "4", default-features = false, features = ["reqwest"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
# TODO(deps): tonic (Spark Connect client to clusters), a SAML SP lib for SAML SSO, sqlx (via
# weft-meta) for the user/grant store.

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
