[package]
name = "weft-gateway"
description = "Control-plane gateway: cluster provisioning, session routing, and worker auto-scaling."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "weft-gateway"
path = "src/main.rs"

[dependencies]
weft-common = { workspace = true }
weft-orchestrator = { path = "../weft-orchestrator", features = ["k8s"] }
axum = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
