[package]
name = "weft-loom"
description = "The CPU engine: vectorized Arrow execution. Embeds DataFusion in Phase 0, carves out native heavy operators in Phase 1."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
weft-common = { workspace = true }
weft-plan = { workspace = true }
weft-physical = { workspace = true }
weft-datasource = { workspace = true }
# Phase 0 backend. The whole workspace shares this one `arrow` (re-exported below) so
# Arrow IPC bytes produced here line up with whatever encodes them downstream.
# Phase 1 carves out native operators on the ~10 heavy ClickBench queries.
datafusion = "54"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
