[package]
name = "weft-loom"
description = "The CPU engine: vectorized Arrow execution. Embeds DataFusion in Phase 0, carves out native heavy operators in Phase 1."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
weft-common = { workspace = true }
weft-plan = { workspace = true }
weft-physical = { workspace = true }
weft-datasource = { workspace = true }
weft-catalog = { workspace = true }
async-trait = "0.1"
# Phase 0 backend. The whole workspace shares this one `arrow` (re-exported below) so
# Arrow IPC bytes produced here line up with whatever encodes them downstream.
# Phase 1 carves out native operators on the ~10 heavy ClickBench queries.
datafusion = "54"
# Read table data from object stores (S3) for Glue/Hive locations on `s3://`. Pinned to the same
# 0.13 line DataFusion pulls so the `ObjectStore` trait/types unify; `aws` adds the S3 client + the
# EC2 instance-role (IMDS) credential provider — no static keys.
object_store = { version = "0.13", features = ["aws"] }
# Data-parallel aggregation of independent key-hash partitions (the native GROUP BY carve-out).
rayon = "1"
# Spark `split(str, regex)` and other regex-based string UDFs (Spark splits on a regex, unlike
# DataFusion's `split_part`). Same major line DataFusion already pulls, so the dep tree stays unified.
regex = "1"
# Spark JSON UDFs (get_json_object / json_array_length / json_object_keys / to_json). Already in the
# tree via DataFusion/arrow-json, so the lock resolves to the same versions — no new dependency tree.
serde = "1"
serde_json = "1"
# Spark `from_json` parses date/timestamp leaves with Spark format patterns; chrono is already in the
# tree via arrow (same 0.4 line), so the lock resolves to the existing version — no new dep tree.
chrono = { version = "0.4", default-features = false, features = ["std"] }
# `register_table`'s CTAS write path builds its own fresh runtime on a dedicated OS thread (the
# DataFusion trait method is sync, but Glue/Hive/object-store writes are async) — needs `rt` in
# [dependencies], not just as a test-only dev-dependency.
tokio = { version = "1", features = ["rt"] }
# `StreamExt::next` to drain a DataFusion `SendableRecordBatchStream` batch-by-batch in the CTAS
# write path (stream the SELECT straight to storage instead of collecting it into driver memory).
# Same 0.3 line the rest of the tree already pulls (weft-execution), so the lock is unchanged.
futures = "0.3"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }
