[package]
name = "weft-optimizer"
description = "The 'heddle' pass: logical optimization + cost-based backend routing (Loom CPU vs Weft-HVM)."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
weft-common = { workspace = true }
weft-plan = { workspace = true }
