[package]
name = "weft-orchestrator"
description = "Cluster provisioning backends behind a `ClusterBackend` seam. The Kubernetes backend builds declarative manifests (no shell anywhere) and applies them via kubectl, so per-user compute runs as hardened, least-privilege pods — replacing the EC2 shell-user-data path that was an injection→RCE vector."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["process", "io-util", "macros", "rt"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
