[package]
name = "weft-physical"
description = "Physical plan: operator selection + the ExecutionPlan trait both backends implement."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
weft-common = { workspace = true }
weft-plan = { workspace = true }
weft-optimizer = { workspace = true }
