[package]
name = "weft-plan"
description = "The 'warp' plan IR: unresolved logical Relation/Expression trees lowered from Spark Connect or SQL."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
weft-common = { workspace = true }
