[package]
name = "weft-scheduler"
description = "Weft job scheduler / workflow engine: cron-triggered and manual runs of task DAGs over a durable Postgres queue (SELECT … FOR UPDATE SKIP LOCKED), with per-task retry and ephemeral job clusters."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "weft-scheduler"
path = "src/main.rs"

[dependencies]
weft-common = { workspace = true }
weft-meta = { workspace = true }
# TODO(deps, Rust >= 1.80): tokio, sqlx (Postgres queue via SKIP LOCKED), cron (schedule parsing),
# serde. The DAG/topo-order model below is the frozen contract; the queue+executor land on top.
