[package]
name = "weft-spark-compat"
description = "Apache Spark parity harness: runs Spark's own golden SQL tests (sql-tests/{inputs,results}) through weft, formats results Spark-style, diffs against the vendored .sql.out goldens, and triages every mismatch into a pass-rate scoreboard."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "weft-parity"
path = "src/bin/parity.rs"

[dependencies]
weft-loom = { workspace = true }
datafusion = "54"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
