[package]
name = "weft-sql"
description = "Spark SQL dialect parser + analyzer; lowers SQL text into the warp plan IR."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
weft-common = { workspace = true }
weft-plan = { workspace = true }
# TODO(deps): sqlparser = "0.5x" (or a Spark-dialect fork) — Sail wrote a bespoke parser
#             that reached 94.5% on 1,373 parsing tests; revisit build-vs-reuse in Phase 0.
